# Qt-doc-viewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: file_item.h  file_item_widget.h  file_manager.h  main_window.h  pdf_viewer_widget.h  toolbar.h  viewer.h
source/: .main_window.cpp.swp  file_item.cpp  file_item_widget.cpp  file_manager.cpp  main_window.cpp  pdf_viewer_widget.cpp  toolbar.cpp  viewer.cpp
ui/: Main_Window.ui  file_item.ui  file_item_widget.ui
